# lox

./: .gitignore  .gitmodules  CMakeLists.txt
include/lox/: class.h  instance.h  interpreter.h  parser.h  resolver.h  scanner.h  token.h  value_type.h
include/lox/expr/: expr.h  get_expr.h
include/lox/stmt/: print_stmt.h  return_stmt.h  stmt.h  var_stmt.h
src/: ast_pretty_printer.cpp  ast_pretty_printer.h  class.cpp  clock_callable.cpp  clock_callable.h  environment.cpp  environment.h  expr.h  function.h  instance.cpp  interpreter.cpp  interpreter.h  lox.h  main.cpp  parser.cpp  parser.h  pretty_printer.cpp  resolver.cpp  resolver.h  return.h  scanner.cpp  scanner.h  stmt.h  token.h  value_type.h
src/expr/: binary_expr.h  expr.h  grouping_expr.h  logical_expr.h  unary_expr.h  variable_expr.h
src/native/: clock_callable.h
src/stmt/: stmt.h
tests/: CMakeLists.txt  parser_test.cpp  scanner_test.cpp
tests/ast_yaml_utils/: ast_yaml_utils.cpp  test_convert.cpp
tree-walk/: CMakeLists.txt
tree-walk/include/lox/: ast_code_generator.h  ast_pretty_printer.h  class.h  function.h  instance.h  interpreter.h  lox.h  parser.h  resolver.h  scanner.h  token.h  value_type.h
tree-walk/include/lox/expr/: assign_expr.h  call_expr.h  expr.h  literal_expr.h  set_expr.h
tree-walk/include/lox/stmt/: block_stmt.h  class_stmt.h  expression_stmt.h  function_stmt.h  if_expression_stmt.h  while_stmt.h
tree-walk/src/: environment.cpp  interpreter.cpp  main.cpp  parser.cpp  scanner.cpp
tree-walk/src/native/: clock_callable.cpp
tree-walk/tests/: CMakeLists.txt  parser_test.cpp  scanner_test.cpp
tree-walk/tests/ast_yaml_utils/: CMakeLists.txt  ast_yaml_utils.h  convert.h
vm/: CMakeLists.txt
vm/include/clox/: chunk.h  compiler.h  memory.h  scanner.h  value.h  vm.h
vm/src/: chunk.c  compiler.c  debug.c  disassembler.c  main.c  memory.c  scanner.c  value.c  vm.c
vm/test/: CMakeLists.txt  test_chunk.cpp  test_scanner.cpp  test_vm.cpp
vm/test/e2e/parser/: add.lox.out
